--- a/Public/signup.css
+++ b/Public/signup.css
@@ -62,11 +62,11 @@ body {
 main {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: hidden;
 }
 .flex {
   width: 100%;
-  height: 865px;
+  height: 94%;
   padding: 24px;
   opacity: 0px;
   display: flex;
@@ -79,8 +79,8 @@ main {
 .img-container {
   height: fit-content;
   background-color: #3E8076;
-  width: 427px;
-  height: 732px;
+  width: 350px;
+  height: 100%;
   padding: 24px;
   gap: 0px;
   display: flex;
@@ -88,34 +88,33 @@ main {
   justify-content: space-between;
 }
 .first-div {
-  width: 379px;
-  height: 226px;
+  height: fit-content;
   opacity: 0px;
   box-sizing: border-box;
-
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 .first-div h1 {
   font-family: Inter;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 700;
   line-height: 24.05px;
   text-align: left;
   color: #ffffff;
+  padding-bottom: 46px;
 }
 .first-div img {
   display: none;
 }
 .first-div h3 {
   font-family: Inter;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
-  line-height: 48.41px;
+  line-height: 34.41px;
   text-align: left;
   color: #ffffff;
+  padding-bottom: 12px;
 }
 .first-div p {
   font-family: PT Sans;
@@ -126,16 +125,16 @@ main {
   color: #ffffff;
 }
 .second-div {
-  width: 379px;
-  height: 200px;
-  padding: 24px;
+  width: 100%;
+  padding: 10px;
   gap: 12px;
   border-radius: 25px;
   opacity: 0px;
   background-color: #3E8076;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  box-sizing: border-box;
 }
 .second-div h4 {
   font-family: Inter;
@@ -155,10 +154,11 @@ main {
   color: #ffffff;
 }
 .form-container {
-  width: 748px;
-  height: 817px;
+  width: 600px;
+  height: 100%;
   gap: 56px;
   opacity: 0px;
+  overflow-y: scroll;
 }
 .seconddiv-prof {
   display: flex;
@@ -232,7 +232,7 @@ main {
 }
 input,
 select {
-  height: 48px;
+  height: 30px;
   padding: 10;
   border: 1px solid black;
 }
@@ -600,6 +600,11 @@ input {
   body {
     width: 100%;
   }
+  main {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+  }
   .flex {
     flex-direction: column;
     /* padding: 15px 15px; */
@@ -631,12 +636,17 @@ input {
   .second-div {
     width: 95%;
   }
+  .form-container{
+    height: fit-content;
+    overflow: hidden;
+  }
   .form-container,
   form,
   input,
   option,
   select {
     width: 100%;
+    box-sizing: border-box;
   }
   h3.title {
     padding-left: 24px;
@@ -661,7 +671,7 @@ input {
     padding: 0;
   }
   .input-div {
-    width: 95%;
+    width: 100%;
   }
   .residence {
     flex-direction: column;
@@ -676,7 +686,7 @@ input {
     width: 100%;
   }
   input {
-    width: 100%;
+    width: 100% !important;
   }
   .img-container {
     width: 100%;
@@ -706,9 +716,7 @@ input {
     line-height: 19.36px;
     text-align: left;
   }
-  .contact-no {
-    width: 100%;
-  }
+ 
   .password-div {
     flex-direction: column;
   }
@@ -748,9 +756,6 @@ input {
     font-weight: 400;
     line-height: 7.76px;
   }
-  .input-div input {
-    width: calc(100% - 10px);
-  }
   .second-detail {
     width: calc(100% - 2px);
   }
@@ -764,21 +769,13 @@ input {
   .currency-input {
     box-sizing: border-box;
   }
-
-  .contact-no {
+  .phone-input-container {
     width: 100%;
-    padding: 0;
+    box-sizing: border-box;
   }
-  .phone-number-container {
+  #phone-number,  .dropdown{
     width: 100%;
-    height: 50px;
-  }
-  #phone-number {
-    width: 100%;
-    overflow: scroll;
-  }
-  .contact-no .input-div {
-    width: 100%;
+   box-sizing: border-box;
   }
   .ssndv {
     width: 100%;
